# racket-vm

./: .gitignore  Cargo.toml  README.md  comparacion.txt  fallamosaqui.rkt
benchmark/: fibonacci.rkt
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/src/: bytecode.rs  fmt.rs  lib.rs  list_iter.rs  value.rs  value_ops.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: buffers.rs  lib.rs  state.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  token.rs  util.rs
crates/parser/src/parsers/: mod.rs
crates/parser/src/parsers/composed/: any_composed.rs  args.rs  body.rs  call.rs  cons.rs  function.rs  lambda.rs  mod.rs
crates/parser/src/parsers/keywords/: cond.rs  define.rs  if.rs  mod.rs
crates/parser/src/parsers/primitives/: any_primitive.rs  binary.rs  boolean.rs  bytes.rs  character.rs  double.rs  float.rs  hex.rs  identifier.rs  integer.rs  mod.rs  octal.rs  regex.rs  string.rs
crates/parser/src/parsers/quoted/: any_quoted.rs  cons.rs  list.rs  mod.rs
crates/repl/: Cargo.toml
crates/repl/src/: main.rs
crates/std-native/: Cargo.toml
crates/std-native-macros/: Cargo.toml
crates/std-native-macros/src/: lib.rs  macro_impl.rs
crates/std-native/src/: lib.rs
crates/std-native/src/base/: comparison.rs  cons.rs  hof.rs  lists.rs  logic.rs  math.rs  mod.rs
crates/vm/: Cargo.toml
crates/vm-tests/: Cargo.toml
crates/vm-tests/src/: lib.rs
crates/vm/src/: cli.rs  control.rs  error.rs  frame.rs  function.rs  lib.rs  native.rs  plugin.rs  stack.rs  storage.rs  vm.rs
