[workspace]
members = ["crates/common","crates/parser", "crates/repl"]
resolver = "3"

[workspace.dependencies]
either = "1.15.0"
thiserror = { version = "2", features = ["derive"] }
chumsky = { version = "0.12", features = ["either"] }

parser = { path = "./crates/parser" }
common = { path = "./crates/common" }

