[workspace]
members = ["crates/compiler","crates/common","crates/parser", "crates/repl", "crates/vm", "crates/std-native-macros", "crates/std-native", "crates/vm-tests"]
resolver = "3"

[workspace.dependencies]
either = "1.15.0"
thiserror = { version = "2" }
chumsky = { version = "0.12", features = ["either"] }
dumpster = "2.1.0"
rapidhash = "4.4.1"
clap = { version = "4", features = ["derive"] }

compiler = { path = "./crates/compiler" }
parser = { path = "./crates/parser" }
common = { path = "./crates/common" }
repl = { path = "./crates/repl" }
std-native = { path = "./crates/std-native" }
std-native-macros = { path = "./crates/std-native-macros" }
vm = { path = "./crates/vm" }
